<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot_stl_ros2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="529388771@qq.com">ubuntu484</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>launch_ros</build_depend>  
  <build_depend>launch</build_depend>

  <!-- Dependencies for runtime -->
  <depend>message_generation</depend>
  <depend>rosidl_default_runtime</depend>
  <depend>rclcpp</depend>  
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
